# winning-cv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README-zh.md  README.md  build_and_push.sh  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.in  requirements.txt  ruff.toml  run_api.py  run_worker.py  webui.py  webui_new.py
.changeset/: README.md
api/: __init__.py  health.py  main.py
config/: settings.py  settings_v2.py
cv/: cv_analyzer.py  cv_generator.py  cv_generator_v2.py  cv_knowledge_base.py
data_store/: airtable_manager.py  cv_version_manager.py  postgres_manager.py  storage_factory.py
docs/: product-telemetry.md  production-hardening.md  production-operations.md  queue-worker-architecture.md
feed/: linkedin_feed.py
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
init-db/: 01-schema.sql  02-data-storage-schema.sql  03-migration-v2.sql  04-task-queue.sql  05-product-telemetry.sql
job_processing/: __init__.py  core.py
job_sources/: additional_job_search.py  linkedin_cookie_health.py  linkedin_cookie_manager.py  linkedin_job_scraper.py  linkedin_login.py  seek_job_scraper.py
nginx/: frontend.conf
scheduler/: job_scheduler.py
scripts/: deploy.sh  install_prod_monitor_cron.sh  prod_migrate_db.sh  prod_monitor.sh  prod_monitor_cron.sh  prod_smoke_check.sh  run_job_with_validation.sh  sync_linkedin_cookies.sh  validate_prod_config.sh
tests/: live_test_additional_jobs.py  test-job-search.py  test_api_integration.py  (+15 more)
(+92 files in other folders)
